# NancyAI-unified

./: .env  .gitignore  Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt
api/: nancy.py
src/nancyai/: bot.py  chatbot.py  movie.py
