[project]
name = "nancyai"
version = "2.0"
description = "Telegram AI chat bot using opensource Llama."
authors = [
    {name = "JeevabharathiRK"}
]
license = {text = "AGPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
